--- a/valorant.html
+++ b/valorant.html
@@ -6,6 +6,11 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600;700&display=swap" rel="stylesheet">
+		<style>
+			.header{
+				background-image: url(assets/valo_1.jpg);
+			}
+		</style>
     </head>
     <body>
         <section class="header">
@@ -18,8 +23,8 @@
                     <ul>
                         <li><a href="index.html">HOME</a></li>
                         <li><a href="valorant.html">VALORANT</a></li>
-                        <li><a href="ml.html">MOBILE LEGENDS</a></li>
-                        <li><a href="genshin.html">GENSHIN IMPACT</a></li>
+                        <li><a href="godOfWar.html">GOD OF WAR</a></li>
+                        <li><a href="p5R.html">PERSONA 5 ROYAL</a></li>
                     </ul>
                 </div>
             </nav>
